testsuite/tests/driver/multipleHomeUnits/MHU_OptionsGHC.hs
{-# OPTIONS_GHC -working-dir=a #-}
{-# OPTIONS_GHC -hidden-module=A #-}
{-# OPTIONS_GHC -reexported-module=A #-}
{-# OPTIONS_GHC -this-package-name=pp #-}
module Main where
